--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -39,6 +39,12 @@
                 app:defaultNavHost="true"
                 app:navGraph="@navigation/main_fragment_nav_graph" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnPublish"
+                style="@style/button"
+                android:layout_gravity="start|bottom"
+                android:text="@string/app_name" />
+
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -51,43 +57,5 @@
             app:menu="@menu/bottom_navigation_menu" />
 
     </LinearLayout>
-
-    <!--<androidx.constraintlayout.widget.ConstraintLayout
-        style="@style/full_color_constraint_layout">
-
-        <TextView
-            android:id="@+id/mainAppTitle"
-            style="@style/main_app_title"
-            android:text="@string/app_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/main_fragment_nav_host_fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:background="@drawable/linear_layout_corner"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/main_app_title_margin"
-            android:padding="@dimen/app_padding"
-            app:defaultNavHost="true"
-            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mainAppTitle"
-            app:navGraph="@navigation/main_fragment_nav_graph" />
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/bottom_navigation_menu" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
 </FrameLayout>
