--- a/app/src/main/res/layout/fragment_contact_networks.xml
+++ b/app/src/main/res/layout/fragment_contact_networks.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/app_padding_half"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".feature.contactnetworks.ContactNetworksFragment">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -15,6 +15,15 @@
             android:id="@+id/contactNetworkList"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnPositive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|bottom"
+            android:layout_marginStart="@dimen/app_padding_half"
+            android:layout_marginBottom="@dimen/app_padding_half"
+            android:text="@string/positive_button" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/flBtnCreateContactNetwork"
