--- a/app/src/main/res/layout/fragment_contact_networks.xml
+++ b/app/src/main/res/layout/fragment_contact_networks.xml
@@ -11,19 +11,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/contactNetworkList"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnPositive"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start|bottom"
-            android:layout_marginStart="@dimen/app_padding_half"
-            android:layout_marginBottom="@dimen/app_padding_half"
-            android:text="@string/positive_button" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/contactNetworkList"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginBottom="@dimen/app_padding"
+                android:layout_weight="1" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnPositive"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|bottom"
+                android:layout_marginStart="@dimen/app_padding_half"
+                android:layout_marginBottom="@dimen/app_padding_half"
+                android:text="@string/positive_button" />
+
+        </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/flBtnCreateContactNetwork"
